--- a/app/views/gears/show.html.erb
+++ b/app/views/gears/show.html.erb
@@ -2,5 +2,7 @@
 <p>Description: <%= @gear.description %></p>
 <p>Price: <%= @gear.price %></p>
 
-<%# <%= link_to 'Update gear', gear_edit_path(@gear) %>
-  <%= link_to 'Delete', delete_gear_path(@gear), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
+<%= link_to 'Back to gears', gears_path, class: 'btn btn-secondary' %>
+
+  <%= link_to 'Update gear', edit_gear_path(@gear) %>
+<%= link_to 'Delete', gear_path(@gear), method: :delete, data: { confirm: "Are you sure?" } %>
