--- a/app/views/gears/new.html.erb
+++ b/app/views/gears/new.html.erb
@@ -1,3 +1,13 @@
+<% if @gear.errors.any? %>
+<div id="error_explanation">
+ <h2><%= pluralize(@gear.errors.count, "error") %> prohibited this gear from being saved:</h2>
+ <ul>
+ <% @gear.errors.full_messages.each do |message| %>
+  <li><%= message %></li> <% end %>
+  </ul>
+  </div>
+  <% end %>
+  
 <h1>New Gear</h1>
 <%= simple_form_for @gear do |f| %>
   <%= f.input :title %>
