--- a/app/views/gears/edit.html.erb
+++ b/app/views/gears/edit.html.erb
@@ -1,7 +1,11 @@
-<h1>Edit <%= @gear.title %></h1>
-<%= simple_form_for @gear do |f| %>
-  <%= f.input :title %>
-   <%= f.input :description %>
-   <%= f.input :price %>
-  <%= f.button :submit %>
-<% end %>
+<div class="m-5">
+  <h1>Edit <%= @gear.title.capitalize %></h1>
+  <%= simple_form_for @gear do |f| %>
+    <%= f.input :title %>
+    <%= f.input :description %>
+    <%= f.input :price %>
+    <%= f.button :submit, class: 'btn btn-primary' %>
+  <% end %>
+  <br>
+  <%= link_to 'Back to gears', gears_path, class: 'btn btn-primary' %>
+</div>
