--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -14,7 +14,7 @@
 /* Header Styles */
 
  h1 {
-  text-align: center;
+  // text-align: center;
   margin-bottom: 20px;
   color: #007bff;
 }
@@ -26,7 +26,7 @@
 
  li {
   padding: 10px;
-  border-bottom: 1px solid #ccc;
+  // border-bottom: 1px solid #ccc;
 }
 
  li:last-child {
