--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,15 +1,17 @@
 
-<div class="container">
+<div class="m-5">
   <h1>Your bookings</h1>
 
-  <%= link_to "Create a new booking", new_gear_booking_path %>
-
+  <%#= link_to "Create a new booking", new_gear_booking_path %>
+<!---->
   <ul>
-    <%= @gear.title %> <br>
+    <%#= @gear.title %> <br>
     <% @bookings.each do |booking|  %>
-    <%= booking.start_date %> - <%= booking.end_date %> <br>
-    <%= link_to "Edit your booking", edit_gear_booking_path(booking) %>
+    <%= booking.start_date %> - <%= booking.end_date %> - <%= booking.gear.title %>
     <br><br>
   <% end %>
   </ul>
+
+  <%= link_to "Home Page", gears_path, class: 'btn btn-primary' %>
+
 </div>
