--- a/app/views/gears/new.html.erb
+++ b/app/views/gears/new.html.erb
@@ -1,3 +1,5 @@
+
+
 <% if @gear.errors.any? %>
 <div id="error_explanation">
  <h2><%= pluralize(@gear.errors.count, "error") %> prohibited this gear from being saved:</h2>
@@ -7,12 +9,15 @@
   </ul>
   </div>
   <% end %>
-  
-<h1>New Gear</h1>
-<%= simple_form_for @gear do |f| %>
-  <%= f.input :title %>
-   <%= f.input :description %>
-   <%= f.input :price %>
-  <%= f.button :submit %>
-<% end %>
-<%= link_to 'Back to gears', gears_path, class: 'btn btn-secondary' %>
+
+<div class="m-5">
+  <h1>New Gear</h1>
+  <%= simple_form_for @gear do |f| %>
+    <%= f.input :title %>
+    <%= f.input :description %>
+    <%= f.input :price %>
+    <%= f.button :submit, class: 'btn btn-primary' %>
+  <% end %>
+  <br><br>
+  <%= link_to 'Back to gears', gears_path, class: 'btn btn-primary' %>
+</div>
