css & some backend

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,8 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+.form-container {
+  background-color: #a7bdd5;  /* Change the background color of the form */
+  color: #164569;
+}
