--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -7,8 +7,8 @@
  body {
   font-family: Arial, sans-serif;
   line-height: 1.6;
-  color: #333;
-  background-color: #f9f9f9;
+  color: #ff8e2b;
+  background-color: #0d2137;
 }
 
 /* Header Styles */
@@ -16,7 +16,8 @@
  h1 {
   // text-align: center;
   margin-bottom: 20px;
-  color: #007bff;
+  // color: #007bff;
+  color: #ff8e2b;
 }
  ul {
   list-style: none;
@@ -37,18 +38,22 @@
 
  a {
   text-decoration: none;
-  color: #007bff;
+  // color: #007bff;
+  color: #ff8e2b;
 }
 
  a:hover {
-  color: #0056b3;
+  // color: #0056b3;
+  color: #ff8e2b;
 }
 
 /* Add Gear Button Styles */
 
 .add-gear-btn {
-  background-color: #007bff;
-  color: #fff;
+  // background-color: #007bff;
+  background-color: #164569;
+  // color: #fff;
+  color: #ff8e2b;
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
@@ -58,3 +63,4 @@
 .add-gear-btn:hover {
   background-color: #0056b3;
 }
+
