--- a/app/views/gears/new.html.erb
+++ b/app/views/gears/new.html.erb
@@ -13,9 +13,9 @@
 <div class="m-5">
   <h1>New Gear</h1>
   <%= simple_form_for @gear do |f| %>
-    <%= f.input :title %>
-    <%= f.input :description %>
-    <%= f.input :price %>
+    <%= f.input :title, input_html: { class: 'form-container' } %>
+    <%= f.input :description, input_html: { class: 'form-container' } %>
+    <%= f.input :price, input_html: { class: 'form-container' } %>
     <%= f.button :submit, class: 'btn btn-primary' %>
   <% end %>
   <br><br>
