--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -28,6 +28,7 @@
  li {
   padding: 10px;
   // border-bottom: 1px solid #ccc;
+  list-style: none;
 }
 
  li:last-child {
@@ -63,4 +64,3 @@
 .add-gear-btn:hover {
   background-color: #0056b3;
 }
-
