--- a/app/views/gears/new.html.erb
+++ b/app/views/gears/new.html.erb
@@ -16,6 +16,7 @@
     <%= f.input :title, input_html: { class: 'form-container' } %>
     <%= f.input :description, input_html: { class: 'form-container' } %>
     <%= f.input :price, input_html: { class: 'form-container' } %>
+    <%= f.input :photo, as: :file %>
     <%= f.button :submit, class: 'btn btn-primary' %>
   <% end %>
   <br><br>
