--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,7 +5,42 @@
 @import "navbar";
 @import "container";
 
-.list{
+.gear-container {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: wrap; /* This allows wrapping to the next line if there is not enough space */
+  gap: 16px; /* Adjust the space between items */
+  // justify-content: center;
+  // align-items: center;
+  flex-grow: 1;
+}
+
+.image-container {
+  position: relative;  /* This will allow the positioning of the <p> tag relative to this container */
+  width: 100%;         /* Set width as needed */
+  max-width: 200px;    /* Set max width as needed */
+  display: flex;
+  flex-direction: column; /* Stack the image and text vertically */
+  justify-content: center; /* Center content vertically */
+  align-items: center;
+}
+
+.image {
+  width: 100%;         /* Ensure the image takes up the full width of the container */
+  height: auto;        /* Maintain the aspect ratio of the image */
+}
+
+.overlay-text {
+  position: absolute;  /* Absolute positioning to place the text over the image */
+  top: 50%;            /* Position it in the middle vertically */
+  left: 50%;           /* Position it in the middle horizontally */
+  transform: translate(-50%, -50%); /* Adjust the position to truly center the text */
+  color: #ff8e2b;        /* Text color */
+  padding-top: 105px;       /* Add some padding around the text */
+  padding-left: 12px;
+  background: linear-gradient(to top, #071626, rgba(0, 0, 0, 0));
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 81%;
+  font-weight: bold;   /* Optional: Make the text bold */
 }
