--- a/app/views/gears/index.html.erb
+++ b/app/views/gears/index.html.erb
@@ -1,17 +1,17 @@
 <div class="mx-5">
   <h1>Gear</h1>
-  <div class="list m-2">
-    <ul>
+
+  <div class="list m-2 gear-container">
     <% @gears.each do |gear| %>
-
+      <div class="image-container">
         <% if gear.photo.attached? %>
-          <%= cl_image_tag gear.photo.key, height: 150, width: 200, crop: :fill %>
+          <%= cl_image_tag gear.photo.key, height: 150, width: 200, crop: :fill, class: "image" %>
         <% end %>
-        <%= link_to gear.title.capitalize, gear %>
-
+        <p><%= link_to gear.title.capitalize, gear, class: "overlay-text" %></p>
+      </div>
     <% end %>
-    </ul>
   </div>
+
   <br>
   <%= link_to 'Add Gear', new_gear_path, class: 'add-gear-btn' %>
 </div>
