--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -3,8 +3,10 @@
   <h1>edit your booking</h1>
 
   <%= simple_form_for([@gear, @booking]) do |f| %>
-  <%= f.input :start_date %>
-  <%= f.input :end_date %>
+  <%= f.input :start_date,  as: :string,
+            input_html: { data: { controller: "datepicker" } } %>
+  <%= f.input :end_date,  as: :string,
+            input_html: { data: { controller: "datepicker" } } %>
   <%= f.submit %>
   <% end %>
   <%= link_to "delete", bookings_path(@booking), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}%>
