--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -7,20 +7,27 @@
   <ul>
     <%#= @gear.title %> <br>
     <% @bookings.each do |booking|  %>
+    <li>
     <%= booking.start_date %> - <%= booking.end_date %> - <%= booking.gear.title %>
-    <% if booking.gear.present? %>
+    <% if booking.present? %>
+    <% if booking.status == "approved" %>
+     <p> approved</p>
+     <% elsif booking.status == "declined" %>
+     <p>declined</p>
+     <% else %>
+
+  <%= link_to 'Approve', approve_booking_path( booking),class: 'btn btn-success', data: {turbo_method: :patch, confirm: 'Are you sure you want to approve this booking?' } %>
+  <%= link_to 'Decline', decline_booking_path( booking), class: 'btn btn-danger', data: {turbo_method: :patch, confirm: 'Are you sure you want to decline this booking?' } %>
+     <% end %>
      <%= link_to 'Update booking', edit_gear_booking_path(booking.gear, booking), class: 'btn btn-primary' %>
     <% else %>
       <span class="text-danger">No associated gear</span>
     <% end %>
+    </li>
     <br><br>
   <% end %>
   </ul>
 
   <%= link_to "Home Page", gears_path, class: 'btn btn-primary' %>
-  <%# <%= link_to 'Update booking', edit_gear_booking_path(@booking.gear_id, @booking), class: 'btn btn-primary' %>
-   <%# <%= link_to 'Update booking', edit_gear_booking_path(@bookings.gear, booking), class: 'btn btn-primary' %>
-  <%# <%= link_to 'Update booking',  edit_gear_booking_path(@bookings), class: 'btn btn-primary' %>
-
 
 </div>
