--- a/app/views/gears/index.html.erb
+++ b/app/views/gears/index.html.erb
@@ -1,5 +1,5 @@
 <div class="mx-5">
-  <h1>Gear</h1>
+  <h1>Gear - To Rent</h1>
 
   <div class="list m-2 gear-container">
     <% @gears.each do |gear| %>
@@ -14,4 +14,21 @@
 
   <br>
   <%= link_to 'Add Gear', new_gear_path, class: 'add-gear-btn' %>
+</div>
+  <br>  <br>
+<div class="mx-5">
+  <h1>Gear - To Rent Out</h1>
+
+  <div class="list m-2 gear-container">
+    <% @gears.each do |gear| %>
+      <div class="image-container">
+        <% if gear.photo.attached? %>
+          <%= cl_image_tag gear.photo.key, height: 150, width: 200, crop: :fill, class: "image" %>
+        <% end %>
+        <p><%= link_to gear.title.capitalize, gear, class: "overlay-text" %></p>
+      </div>
+    <% end %>
+  </div>
+
+  <br>
 </div>
