--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -9,5 +9,5 @@
             input_html: { data: { controller: "datepicker" } } %>
   <%= f.submit %>
   <% end %>
-  <%= link_to "delete", bookings_path(@booking), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}%>
+  <%# <%= link_to "delete", bookings_path(@booking), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}%> 
 </div>
