--- a/app/views/gears/index.html.erb
+++ b/app/views/gears/index.html.erb
@@ -1,5 +1,5 @@
 <div class="mx-5">
-  <h1>Gear</h1>
+  <h1>Gears - To Rent</h1>
 
   <div class="list m-2 gear-container">
     <% @gears.each do |gear| %>
@@ -15,3 +15,6 @@
   <br>
   <%= link_to 'Add Gear', new_gear_path, class: 'add-gear-btn' %>
 </div>
+<br>
+<br>
+<br>
