--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,8 +1,10 @@
 <div class="m-5">
-<h1>show</h1>
-
+  <h1>show</h1>
   <%= @booking.start_date %> <p> - </p> <%= @booking.end_date %>
+  <div class="button">
+    <%= link_to "your bookings", gear_bookings_path %>
+    <%= link_to 'Update booking', edit_gear_booking_path(@booking.gear_id, @booking), class: 'btn btn-primary' %>
+    <%= link_to "Delete this Booking", booking_path(booking), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: 'btn btn-primary' %>
+  </div>
 
-<%= link_to "your bookings", gear_bookings_path %>
- <%= link_to 'Update booking', edit_gear_booking_path(@booking.gear_id, @booking), class: 'btn btn-primary' %>
 </div>
