--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,3 +1,21 @@
 // Import page-specific CSS files here.
 @import "home";
 
+
+// .addgear_home_page{
+//   // background-color: #007bff;
+//   // background-color: #164569;
+//   background-image: linear-gradient(to top, #0d2845, #0d2137);
+//   // color: #fff;
+//   color: #ff8e2b;
+//   padding: 10px 20px;
+//   border: none;
+//   border-radius: 5px;
+//   cursor: pointer;
+//   // width: 200px;
+// }
+
+// .addgear_home_page:hover{
+//   // background-color: #0056b3;
+//   background-image: linear-gradient(to top, #0d2845, #0d2137)
+// }
