--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,5 +1,5 @@
 
-<div class="m-5">
+<div class="m-5 gearbody">
   <h1>Your bookings</h1>
 
   <%#= link_to "Create a new booking", new_gear_booking_path %>
