--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,28 +6,38 @@
 @import "container";
 @import "button";
 
+.gearbody{
+  padding-top: 85px;
+}
+
 .gear-container {
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-wrap: wrap; /* This allows wrapping to the next line if there is not enough space */
   gap: 16px; /* Adjust the space between items */
-  // justify-content: center;
-  // align-items: center;
-  flex-grow: 1;
 }
 
 .image-container {
   position: relative;  /* This will allow the positioning of the <p> tag relative to this container */
   width: 100%;         /* Set width as needed */
+  height: auto;
   max-width: 200px;    /* Set max width as needed */
   display: flex;
-  flex-direction: column; /* Stack the image and text vertically */
+  // flex-direction: column;
   justify-content: center; /* Center content vertically */
   align-items: center;
+  transition: transform 0.3s ease;
 }
 
-.image {
+.image-container:hover{
+  transform: scale(0.9);
+  cursor: pointer;
+}
+
+.image-front {
   width: 100%;         /* Ensure the image takes up the full width of the container */
-  height: auto;        /* Maintain the aspect ratio of the image */
+  height: 100%;        /* Maintain the aspect ratio of the image */
 }
 
 .overlay-text {
@@ -42,6 +52,7 @@
   background-size: cover;
   background-position: center;
   width: 100%;
-  height: 81%;
+  height: 100%;
   font-weight: bold;   /* Optional: Make the text bold */
+  border: 0;
 }
