--- a/app/views/gears/index.html.erb
+++ b/app/views/gears/index.html.erb
@@ -1,20 +1,18 @@
-<div class="mx-5">
-  <h1>Gears - To Rent</h1>
+<div class="mx-5 gearbody">
+  <div class="gear-header">
+    <h1 class="head-gear">Gear</h1>
+    <%= link_to 'Add Gear', new_gear_path, class: "addgear" %>
+  </div>
 
   <div class="list m-2 gear-container">
     <% @gears.each do |gear| %>
       <div class="image-container">
         <% if gear.photo.attached? %>
-          <%= cl_image_tag gear.photo.key, height: 150, width: 200, crop: :fill, class: "image" %>
+          <%= cl_image_tag gear.photo.key, height: 150, width: 200, crop: :fill, class: "image-front" %>
         <% end %>
         <p><%= link_to gear.title.capitalize, gear, class: "overlay-text" %></p>
       </div>
     <% end %>
   </div>
 
-  <br>
-  <%= link_to 'Add Gear', new_gear_path, class: 'add-gear-btn' %>
 </div>
-<br>
-<br>
-<br>
