--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,6 +5,7 @@
 @import "navbar";
 @import "container";
 @import "button";
+@import "cards";
 
 .gearbody{
   padding-top: 85px;
@@ -20,14 +21,16 @@
 
 .image-container {
   position: relative;  /* This will allow the positioning of the <p> tag relative to this container */
-  width: 100%;         /* Set width as needed */
-  height: auto;
+  width: 200px;         /* Set width as needed */
+  height: 200px;
   max-width: 200px;    /* Set max width as needed */
   display: flex;
   // flex-direction: column;
   justify-content: center; /* Center content vertically */
   align-items: center;
   transition: transform 0.3s ease;
+  border-radius: 50% !important;
+  margin-bottom: 30px;
 }
 
 .image-container:hover{
@@ -37,22 +40,23 @@
 
 .image-front {
   width: 100%;         /* Ensure the image takes up the full width of the container */
-  height: 100%;        /* Maintain the aspect ratio of the image */
+  height: 100%;
+  object-fit: cover;        /* Maintain the aspect ratio of the image */
 }
 
 .overlay-text {
-  position: absolute;  /* Absolute positioning to place the text over the image */
+ position: absolute;/* Absolute positioning to place the text over the image */
   top: 50%;            /* Position it in the middle vertically */
   left: 50%;           /* Position it in the middle horizontally */
   transform: translate(-50%, -50%); /* Adjust the position to truly center the text */
   color: #ff8e2b;        /* Text color */
-  padding-top: 105px;       /* Add some padding around the text */
+  padding-top: 10px;       /* Add some padding around the text */
   padding-left: 12px;
   background: linear-gradient(to top, #071626, rgba(0, 0, 0, 0));
   background-size: cover;
   background-position: center;
   width: 100%;
   height: 100%;
-  font-weight: bold;   /* Optional: Make the text bold */
+  font-weight: bolder;   /* Optional: Make the text bold */
   border: 0;
 }
