--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -4,18 +4,23 @@
 
   <%#= link_to "Create a new booking", new_gear_booking_path %>
  <!---->
-  <ul>
-    <%#= @gear.title %> <br>
-    <% @bookings.each do |booking|  %>
-    <li>
-    <%= booking.start_date %> - <%= booking.end_date %> - <%= booking.gear.title %>
-    <% if booking.present? %>
-    <% if booking.status == "approved" %>
-     <p> approved</p>
-     <% elsif booking.status == "declined" %>
-     <p>declined</p>
-     <% else %>
+ <div class="cards">
+    <ul>
+      <%#= @gear.title %> <br>
+      <% @bookings.each do |booking|  %>
+      <li>
+      <%= booking.gear.title %>
+      <br>
+      <br>
+      <%= booking.start_date %> : <%= booking.end_date %>
+  </div>
     <div class="button">
+      <% if booking.present? %>
+      <% if booking.status == "approved" %>
+      <p> approved</p>
+      <% elsif booking.status == "declined" %>
+      <p>declined</p>
+      <% else %>
       <%= link_to 'Approve', approve_booking_path( booking),class: 'btn btn-success', data: {turbo_method: :patch, confirm: 'Are you sure you want to approve this booking?' } %>
       <%= link_to 'Decline', decline_booking_path( booking), class: 'btn btn-danger', data: {turbo_method: :patch, confirm: 'Are you sure you want to decline this booking?' } %>
         <% end %>
