--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,14 +1,27 @@
 .cards {
-   width: 300px;
-   border: 1px solid #ccc;
-   border-radius: 15px;
-   overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    color: #ff8e2b;
-    font-weight: bold;
-  }
- 
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.card {
+  background-color: #071626;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.card-title {
+  color:  #ff8e2b;
+  font-size: 1.25rem;
+  font-weight: bold;
+}
+
+.card-text {
+  margin-top: 10px;
+  color:  #ff8e2b;
+  margin-bottom: 10px;
+}
+
+.button-group .btn {
+  margin-right: 5px;
+}
