--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,6 +6,7 @@
 @import "container";
 @import "button";
 @import "cards";
+@import "search_bar";
 
 .gearbody{
   padding-top: 85px;
@@ -30,7 +31,7 @@
   align-items: center;
   transition: transform 0.3s ease;
   border-radius: 50% !important;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
 }
 
 .image-container:hover{
@@ -60,3 +61,71 @@
   font-weight: bolder;   /* Optional: Make the text bold */
   border: 0;
 }
+
+.icon-group {
+  position: absolute;
+  top: 10px; /* Position from the bottom */
+  right: 10px; /* Position from the right */
+  display: flex;
+  gap: 10px;
+   padding: 10px;
+}
+
+.icon-group i {
+  color:#071626;
+  font-size: 1.5rem;
+  background-color: #ff8e2b;
+  border-radius: 50%;
+  padding: 5px;
+}
+
+.icon-group .suit-heart {
+  color: #fff;
+  font-size: 1.5rem;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 50%;
+  padding: 5px;
+}
+
+.dots-group {
+  position: absolute;
+  bottom: 10px; /* Position from the bottom */
+  left: 50%; /* Center horizontally */
+  transform: translateX(-50%); /* Adjust for exact center */
+  display: flex;
+  gap: 10px;
+}
+
+.dots-group .dot {
+  width: 5px;
+  height: 5px;
+  background-color: orange; /* Color of the dots */
+  border-radius: 50%; }
+
+ .fantasy-address {
+  position: absolute;
+  // top: 100%; /* Start positioning right below the image container */
+  // bottom: 30px; /* Adjust position as needed */
+  left: 10px;
+  color: white;
+  font-size: 0.75rem;
+  text-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
+  font-style: italic; /* Optional for styling */
+  // text-align: center; /* Center the address text */
+   margin-top: 280px; /* Add some space above the address */
+  // color: #333;
+  // font-size: 1rem;
+
+}
+
+.fantasy-address .star-icon {
+  color: orange; /* Color of the star icon */
+  font-size: 0.50rem; /* Make the star very small */
+  margin-left: 0px; /* Space between the star and the address */ }
+
+  .fantasy-address .rating {
+    font-size: 0.9rem; /* Adjust the size of the rating number */
+    margin-right: 15px; /* Space between the rating and the address */
+    color:#0056b3;/* Ensure the rating number is clearly visible */
+    font-weight: bolder;
+  }
