--- a/app/views/gears/new.html.erb
+++ b/app/views/gears/new.html.erb
@@ -20,5 +20,5 @@
     <%= f.button :submit, class: 'btn btn-primary' %>
   <% end %>
   <br><br>
-  <%= link_to 'Back to gears', gears_path, class: 'btn btn-primary' %>
+  <%# <%= link_to 'Back to gears', gears_path, class: 'btn btn-primary' %> 
 </div>
