--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -11,5 +11,5 @@
   <%#= f.submit 'Create Booking', class: 'btn btn-primary' %>
 <% end %>
 <br><br>
-<%= link_to "See all bookings", bookings_path, class: 'btn btn-primary' %>
+<%# <%= link_to "See all bookings", bookings_path, class: 'btn btn-primary' %> 
 </div>
