--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -8,6 +8,7 @@
 @import "cards";
 @import "search_bar";
 
+
 .gearbody{
   padding-top: 85px;
 }
@@ -129,3 +130,55 @@
     color:#0056b3;/* Ensure the rating number is clearly visible */
     font-weight: bolder;
   }
+
+ /* Footer Section */
+.footer {
+  background-color:#071626;
+  color: white;
+  text-align: center;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  // position: absolute;
+  // bottom: 0px;
+  // width: 100%;
+}
+
+.footer-section {
+  margin-bottom: 20px;
+}
+
+.footer-section h4 {
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+  color: orange;
+}
+
+.footer-section a {
+  color: orange;
+  margin: 0 10px;
+  text-decoration: none;
+}
+
+.footer-section a:hover {
+  color: #ff8e2b;
+}
+
+.footer-section .form-control {
+  margin-top: 10px;
+  padding: 5px;
+  width: 80%;
+}
+
+.footer-section .btn {
+  margin-top: 10px;
+  background-color: orange;
+  color: white;
+}
+
+.footer p {
+  margin: 0;
+  font-size: 1rem;
+}
