--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -17,7 +17,7 @@
 
 .addgear{
   border-radius: 5px;
-  background-image: linear-gradient(to top, #13365c, #071626);
+  background-image: linear-gradient(to top, #1d528a, #071626);
   padding: 15px;
   width: 120px;
   height: 50px;
@@ -30,4 +30,5 @@
 .addgear:hover{
   filter: brightness(1.2);
   background-image: linear-gradient(to top, #15375a, #071626);
+  transform: scale(0.9);
 }
