--- a/app/assets/stylesheets/components/_search_bar.scss
+++ b/app/assets/stylesheets/components/_search_bar.scss
@@ -21,13 +21,14 @@
 
  .input-group-append .search-btn {
   border-radius: 0 25px 25px 0; /* Rounded corners with right part */
-  border: 1px solid #ccc;
-  font-size: 18px; /* Increase font size */
+  // border: 1px solid #ccc;
+  font-size: 14px; /* Increase font size */
   padding: 15px 25px; /* Increase padding to match input */
   margin-left: -1px; /* Ensure no gap between input and button */
-  transition: background-color 0.3s ease;
+  transition: transform 0.3s ease;
 }
 
 .input-group-append .search-btn:hover {
-  background-color: #0056b3;
+  color: #ff8e2b;
+  transform: scale(1.2);
 }
