--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -2,14 +2,14 @@
 
 @import "home";
 
+.background{
+  padding-top: 85px;
+  margin-right: 100px;
+  margin-left: 100px;
+}
+
 .gear-card{
   display: flex;
-  // justify-content: center;
-  // align-items: center;
-  // height: 100vh;
-  margin: 45px;
-  // height: 100%;
-  padding-top: 75px;
 }
 
 .title{
@@ -20,14 +20,19 @@
   width: 50%;
 }
 
-.image-gear{
+.gear-image{
   width: 100%;
   height: auto;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 .info{
   width: 50%;
   padding: 35px;
+  background-image: linear-gradient(to top, #15375a, #071626);
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .links{
