--- a/app/views/gears/show.html.erb
+++ b/app/views/gears/show.html.erb
@@ -1,28 +1,30 @@
-<div class="gear-card">
+<div class="background">
+  <div class="gear-card">
 
-  <div class="image">
-    <%= cl_image_tag @gear.photo.key, height: 150, width: 200, crop: :fill, class: "image-gear" %>
-  </div>
+    <div class="image">
+      <%= cl_image_tag @gear.photo.key, height: 150, width: 200, crop: :fill, class: "gear-image" %>
+    </div>
 
-  <div class="info">
-    <h1 class="title"><%= @gear.title.capitalize %></h1>
+    <div class="info">
+      <h1 class="title"><%= @gear.title.capitalize %></h1>
 
-    <p>Description: <%= @gear.description.capitalize %></p>
+      <p>Description: <%= @gear.description.capitalize %></p>
 
-    <p>Price: R
-      <span data-controller="typed" data-typed-strings-value="<%= [@gear.price.to_s] %>">
-        <%= @gear.price %>
-      </span>
-    </p>
+      <p>Price: R
+        <span data-controller="typed" data-typed-strings-value="<%= [@gear.price.to_s] %>">
+          <%= @gear.price %>
+        </span>
+      </p>
 
-    <br><br>
-
-    <p class="bookings-title">Current Bookings:</p>
-      <% @gear.bookings.each do |booking|  %>
-      <%= booking.start_date %> - <%= booking.end_date %> -
-      <%= link_to "Delete this Booking", booking_path(booking), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: 'btn btn-primary' %>
       <br><br>
-    <% end %>
+
+      <p class="bookings-title">Current Bookings:</p>
+        <% @gear.bookings.each do |booking|  %>
+        <%= booking.start_date %> - <%= booking.end_date %> -
+        <%= link_to "Delete this Booking", booking_path(booking), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: 'btn btn-primary' %>
+        <br><br>
+      <% end %>
+    </div>
   </div>
 </div>
 
@@ -37,4 +39,3 @@
   <%= link_to "Delete this Gear", gear_path(@gear), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: 'btn btn-primary' %>
 
 </div>
-
