--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,49 +2,49 @@
   <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
     <div class="container-fluid">
 
-      <%= link_to gears_path, class: "navbar-brand" do %>
-        <%#= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
-        <%= image_tag "scuba3.png", class: "image" %>
-      <% end %>
-
+    <!--search bar-->
       <div class="row justify-content-center">
+        <% if user_signed_in? %>
+
         <div class="col-sm-50 my-8">
-          <%= form_with url: gears_path, method: :get, class: "search-form " do %>
+          <%= form_with url: gears_path, method: :get, class: "search-form" do %>
             <div class="input-group">
+
               <%= text_field_tag :query,
                 params[:query],
-                class: "form-control search-input",
+                class: "form-control search-input search-height",
                 placeholder: "type a gear"
               %>
-              <div class="input-group-append">
-                <%= submit_tag "Search", name: "", class: "btn btn-primary search-btn" %>
+
+              <div class="input-group-append search-button submit">
+                <%= submit_tag "Search", name: "", class: "btn btn-primary search-btn submit" %>
               </div>
+
             </div>
           <% end %>
         </div>
+        <% end %>
       </div>
 
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto">
           <% if user_signed_in? %>
             <li class="nav-item active">
-              <%= link_to "Bookings", bookings_path, class: "nav-link" %>
+              <%= link_to "Bookings", bookings_path, class: "nav-link booking" %>
             </li>
 
             <li class="nav-item dropdown">
               <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <%# <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
-                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
-                  <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
-                </svg>
+                <div class="navbar-brand">
+                  <%= image_tag "scuba3.png", class: "image" %>
+                </div>
+
               </a>
 
               <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                <%# <%= link_to "Home", gears_path, class: "dropdown-item" %>
+                <%= link_to "Home", gears_path, class: "dropdown-item" %>
                 <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
               </div>
 
@@ -59,3 +59,10 @@
     </div>
   </div>
 </div>
+
+
+
+
+<!--                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+                  <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
+                </svg>-->
